--- a/src/app/src/_modules/home/learn-now/learn-now.component.html
+++ b/src/app/src/_modules/home/learn-now/learn-now.component.html
@@ -7,36 +7,36 @@
           <div class="unica-lt-box">
             <div class="box-item">
               <div class="u-box-lt" style="background-image:url(https://i.imgur.com/wRBPUrA.png);">
-                <a href="">
-                  <span>Yoga</span>
+                <a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Y-Tế',Id:'4'}">
+                  <span>Y Tế</span>
                 </a>
               </div>
             </div>
             <div class="box-item">
               <div class="u-box-lt" style="background-image:url(https://unica.vn/media/img/a7.png);">
-                <a href="">
+                <a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Âm-Nhạc',Id:'5'}">
                   <span>Âm Nhạc</span>
                 </a>
               </div>
             </div>
             <div class="box-item">
               <div class="u-box-lt" style="background-image:url(https://unica.vn/media/img/a1.png);">
-                <a href="">
+                <a  routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Công-Nghệ-Thông-Tin',Id:'1'}">
                   <span>Lập Trình</span>
                 </a>
               </div>
             </div>
             <div class="box-item">
               <div class="u-box-lt" style="background-image:url(https://unica.vn/media/img/a4.png);">
-                <a href="">
+                <a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Kinh-Tế',Id:'2'}">
                   <span>Kinh Tế</span>
                 </a>
               </div>
             </div>
             <div class="box-item">
               <div class="u-box-lt" style="background-image:url(https://unica.vn/media/img/a2.png);">
-                <a href="">
-                  <span>Bán hàng online</span>
+                <a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Giáo Dục',Id:'3'}">
+                  <span>Giáo dục</span>
                 </a>
               </div>
             </div>
