--- a/src/app/src/_modules/home/search-result/search-result.component.css
+++ b/src/app/src/_modules/home/search-result/search-result.component.css
@@ -26,3 +26,67 @@ ul {
 .fa-star{
     color:yellow
 }
+.card {
+    height: 315px;
+    overflow: hidden; }
+.card .card-body {
+      padding: 1rem; }
+.card .card-body .card-title {
+        display: -webkit-box;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        min-height: 39px;
+        -webkit-line-clamp: 2;
+        -moz-line-clamp: 2;
+        -ms-line-clamp: 2;
+        -o-line-clamp: 2;
+        line-clamp: 2;
+        -webkit-box-orient: vertical;
+        -moz-box-orient: vertical;
+        -ms-box-orient: vertical;
+        -o-box-orient: vertical;
+        box-orient: vertical;
+        color: #29303b;
+        font-size: 15px;
+        font-weight: 600;
+      margin-bottom: 0; }
+.card .card-body .card-title a{
+color: #ffffff;
+}
+ .card .card-body .card-text {
+        color: #686f7a;
+        font-size: 12px;
+        font-weight: normal;
+        margin: 5px 0; }
+.card .card-body .star {
+        color: #F4C150;
+        font-size: 12px;
+        font-weight: normal; }
+.card .card-body .number_average {
+        color: #686f7a;
+        font-size: 13px;
+        font-weight: 600; }
+.card .card-body .number_rating {
+        color: #686f7a;
+        font-size: 13px;
+        font-weight: normal; }
+.card .card-body .price {
+        text-align: right;
+        padding: 10px 0;
+       }
+       
+.card .card-body .price p:first-child {
+          color: black;
+          font-size: 20px;
+          font-weight: 600;
+          margin-right: 20px;
+          /* text-decoration: line-through;  */
+        }
+ .card .card-body .price p:last-child {
+          color: black;
+          font-size: 14px;
+          font-weight: 600;
+         }
+         .card .card-body a{
+           /* color:#eb1436!important; */
+         }
