--- a/src/app/src/_modules/home/search-result/search-result.component.html
+++ b/src/app/src/_modules/home/search-result/search-result.component.html
@@ -8,82 +8,97 @@
               <p
                 style="font-size: 16px;font-weight: bold;border-bottom: 1px solid #d7d7d7;margin-bottom: 10px;padding-bottom: 5px;">
                 Danh mục khóa học</p>
-                <ul>
-                  <li class="hassub"><a title="Các khóa học công nghệ thông tin Online từ cơ bản đến chuyên sâu"
-                     routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Công Nghệ Thông Tin',Id:'1'}"><i class="fa fa fa-code" aria-hidden="true"></i> Công nghệ thông
-                      tin</a>
-                    <ul class="issub" style="z-index: 1008; display: none;">
-                      <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Công-Nghệ-Thông-Tin',Id:'1'}">Tất cả Công nghệ thông tin</a></li>
-                      <li><a href="/tag/co-so-du-lieu">Đồ Họa</a></li>
-                      <li><a href="/tag/hoc-quan-tri-mang">Phần Cứng</a></li>
-                      <li><a href="/tag/lap-trinh">Phần Mềm</a></li>
-                      <li><a href="/tag/lap-trinh-web">Mạng Máy Tính</a></li>
-                    </ul>
-                  </li>
-                  <li class="hassub"><a title="Các khóa học tin học văn phòng từ cơ bản đến nâng cao tốt nhất"
-                    routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Kinh Tế',Id:'2'}"><i class="fa fa fa-desktop" aria-hidden="true"></i> Kinh Tế</a>
-                    <ul class="issub" style="z-index: 1011; display: none;">
-                      <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Kinh Tế',Id:'2'}">Tất cả Kinh tế</a></li>
-                      <li><a >Tài Chính</a></li>
-                      <li><a >Sales</a></li>
-                      <li><a >Chiến lược kinh tế</a></li>
-                    </ul>
-                  </li>
-                  <li class="hassub"><a title="Các khóa học thiết kế từ cơ bản đến chuyên sâu" routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Giáo Dục',Id:'3'}"><i
-                        class="fa fa fa-paint-brush" aria-hidden="true"></i>Giáo Dục</a>
-                    <ul class="issub" style="z-index: 1012; display: none;">
-                      <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Giáo Dục',Id:'3'}">Tất cả Giáo dục</a></li>
-                      <li><a >Toán học</a></li>
-                      <li><a >Khoa Học</a></li>
-                      <li><a >Ngôn ngữ học</a></li>
-                      
-                    </ul>
-                  </li>
-                  <li class="hassub"><a title="Khóa học Marketing thực chiến từ những giảng viên hàng đầu Việt Nam"
-                    routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Y Tế',Id:'4'}"><i class="fa fa fa-line-chart" aria-hidden="true"></i> Y Tế</a>
-                    <ul class="issub" style="z-index: 1013; display: none;">
-                      <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Y Tế',Id:'4'}">Tất cả Y Tế</a></li>
-                      <li><a href="/tag/facebook-marketing">Dinh Dưỡng</a></li>
-                      <li><a href="/tag/tu-dong-hoa-marketing">Yoga - Fitness</a></li>
-                      <li><a href="/tag/email-marketing">Sơ cứu</a></li>
-                     
-                    </ul>
-                  </li>
-                  <li class="hassub"><a title="Khóa học Sale, bán hàng từ các chuyên gia Marketing hàng đầu course"
-                    routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Âm Nhạc',Id:'5'}"><i class="fa fa fa-shopping-cart" aria-hidden="true"></i> Âm Nhạc
-                      </a>
-                    <ul class="issub" style="z-index: 1014; display: none;">
-                      <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Âm Nhạc',Id:'5'}">Tất cả Âm nhạc</a></li>
-                      <li><a >Thanh nhạc</a></li>
-                      <li><a >Kỹ thuật nhạc cổ điển</a></li>
-                      <li><a >Phần mềm</a></li>
-                      
-                    </ul>
-                  </li>
-                  <li class="hassub"><a title="Các khóa học kinh doanh và khởi nghiệp để gia tăng doanh số hiệu quả"
-                    routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Thời Trang',Id:'6'}"><i class="fa fa fa-rocket" aria-hidden="true"></i> Thời Trang</a>
-                    <ul class="issub" style="z-index: 1002; display: none;">
-                      <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Thời Trang',Id:'6'}">Tất cả Thời Trang</a></li>
-                      
-                    </ul>
-                  </li>
-                  <li class="hassub"><a title="Các khóa học phát triển cá nhân để cải thiện cuộc sống và sự nghiệp"
-                    routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Sắc Đẹp',Id:'7'}"><i class="fa fa fa-lightbulb-o" aria-hidden="true"></i> Sắc Đẹp</a>
-                    <ul class="issub" style="z-index: 1002; display: none;">
-                      <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Sắc Đẹp',Id:'7'}">Tất cả Sắc đẹp</a></li>
-                      
-                    </ul>
-                  </li>
-                  <li class="hassub"><a title="Các khóa học nâng các kiến thức sức khỏe và giới tính cho người Việt"
-                    routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Nghệ Thuật',Id:'8'}"><i class="fa fa fa-heartbeat" aria-hidden="true"></i> Nghệ Thuật</a>
-                    <ul class="issub" style="z-index: 1005; display: none;">
-                      <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Nghệ Thuật',Id:'8'}">Tất cả Nghệ Thuật</a></li>
-                      
-                    </ul>
-                  </li>
-                  
-  
-                </ul>
+              <ul>
+                <li class="hassub"><a title="Các khóa học công nghệ thông tin Online từ cơ bản đến chuyên sâu"
+                    routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Công Nghệ Thông Tin',Id:'1'}"><i
+                      class="fa fa fa-code" aria-hidden="true"></i> Công nghệ thông
+                    tin</a>
+                  <ul class="issub" style="z-index: 1008; display: none;">
+                    <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Công-Nghệ-Thông-Tin',Id:'1'}">Tất cả
+                        Công nghệ thông tin</a></li>
+                    <li><a href="/tag/co-so-du-lieu">Đồ Họa</a></li>
+                    <li><a href="/tag/hoc-quan-tri-mang">Phần Cứng</a></li>
+                    <li><a href="/tag/lap-trinh">Phần Mềm</a></li>
+                    <li><a href="/tag/lap-trinh-web">Mạng Máy Tính</a></li>
+                  </ul>
+                </li>
+                <li class="hassub"><a title="Các khóa học tin học văn phòng từ cơ bản đến nâng cao tốt nhất"
+                    routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Kinh Tế',Id:'2'}"><i
+                      class="fa fa fa-desktop" aria-hidden="true"></i> Kinh Tế</a>
+                  <ul class="issub" style="z-index: 1011; display: none;">
+                    <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Kinh Tế',Id:'2'}">Tất cả Kinh tế</a>
+                    </li>
+                    <li><a>Tài Chính</a></li>
+                    <li><a>Sales</a></li>
+                    <li><a>Chiến lược kinh tế</a></li>
+                  </ul>
+                </li>
+                <li class="hassub"><a title="Các khóa học thiết kế từ cơ bản đến chuyên sâu"
+                    routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Giáo Dục',Id:'3'}"><i
+                      class="fa fa fa-paint-brush" aria-hidden="true"></i>Giáo Dục</a>
+                  <ul class="issub" style="z-index: 1012; display: none;">
+                    <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Giáo Dục',Id:'3'}">Tất cả Giáo
+                        dục</a></li>
+                    <li><a>Toán học</a></li>
+                    <li><a>Khoa Học</a></li>
+                    <li><a>Ngôn ngữ học</a></li>
+
+                  </ul>
+                </li>
+                <li class="hassub"><a title="Khóa học Marketing thực chiến từ những giảng viên hàng đầu Việt Nam"
+                    routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Y Tế',Id:'4'}"><i
+                      class="fa fa fa-line-chart" aria-hidden="true"></i> Y Tế</a>
+                  <ul class="issub" style="z-index: 1013; display: none;">
+                    <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Y Tế',Id:'4'}">Tất cả Y Tế</a></li>
+                    <li><a href="/tag/facebook-marketing">Dinh Dưỡng</a></li>
+                    <li><a href="/tag/tu-dong-hoa-marketing">Yoga - Fitness</a></li>
+                    <li><a href="/tag/email-marketing">Sơ cứu</a></li>
+
+                  </ul>
+                </li>
+                <li class="hassub"><a title="Khóa học Sale, bán hàng từ các chuyên gia Marketing hàng đầu course"
+                    routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Âm Nhạc',Id:'5'}"><i
+                      class="fa fa fa-shopping-cart" aria-hidden="true"></i> Âm Nhạc
+                  </a>
+                  <ul class="issub" style="z-index: 1014; display: none;">
+                    <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Âm Nhạc',Id:'5'}">Tất cả Âm nhạc</a>
+                    </li>
+                    <li><a>Thanh nhạc</a></li>
+                    <li><a>Kỹ thuật nhạc cổ điển</a></li>
+                    <li><a>Phần mềm</a></li>
+
+                  </ul>
+                </li>
+                <li class="hassub"><a title="Các khóa học kinh doanh và khởi nghiệp để gia tăng doanh số hiệu quả"
+                    routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Thời Trang',Id:'6'}"><i
+                      class="fa fa fa-rocket" aria-hidden="true"></i> Thời Trang</a>
+                  <ul class="issub" style="z-index: 1002; display: none;">
+                    <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Thời Trang',Id:'6'}">Tất cả Thời
+                        Trang</a></li>
+
+                  </ul>
+                </li>
+                <li class="hassub"><a title="Các khóa học phát triển cá nhân để cải thiện cuộc sống và sự nghiệp"
+                    routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Sắc Đẹp',Id:'7'}"><i
+                      class="fa fa fa-lightbulb-o" aria-hidden="true"></i> Sắc Đẹp</a>
+                  <ul class="issub" style="z-index: 1002; display: none;">
+                    <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Sắc Đẹp',Id:'7'}">Tất cả Sắc đẹp</a>
+                    </li>
+
+                  </ul>
+                </li>
+                <li class="hassub"><a title="Các khóa học nâng các kiến thức sức khỏe và giới tính cho người Việt"
+                    routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Nghệ Thuật',Id:'8'}"><i
+                      class="fa fa fa-heartbeat" aria-hidden="true"></i> Nghệ Thuật</a>
+                  <ul class="issub" style="z-index: 1005; display: none;">
+                    <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Nghệ Thuật',Id:'8'}">Tất cả Nghệ
+                        Thuật</a></li>
+
+                  </ul>
+                </li>
+
+
+              </ul>
             </div>
           </section>
         </div>
@@ -93,41 +108,37 @@
               tìm kiếm: {{key}}</h1>
           </div>
           <div class="row" *ngIf='flagEx'>
-            <div class="card col-lg-4 col-md-4" *ngFor='let khoahoc of seachResult | paginate: { itemsPerPage: 6, currentPage: p }'>
+            <div class="card col-lg-4 col-md-4"
+              *ngFor='let khoahoc of seachResult | paginate: { itemsPerPage: 6, currentPage: p }'>
               <img class="card-img-top" src={{khoahoc.HinhAnh}} alt="kh1" height="100px" />
               <div class="card-body">
-                  <div class="card-body_content">
-                      <h4 class="card-title">{{khoahoc.TenKH}}</h4>
-                      <p class="card-text">Giảng Viên: {{khoahoc.GiangVien}}</p>
-                      <span class="star">
-                          <i class="fa fa-star"></i>
-                          <i class="fa fa-star"></i><i class="fa fa-star"></i>
-                          <i class="fa fa-star"></i>
-                          <i class="fa fa-star-half-o"></i>
-                      </span>
-                      <span class="number_average">4.6</span>
-                      <span class="number_rating">(11.597)</span>
-                      <div class="price text-center">
+                <div class="card-body_content">
+                  <h4 class="card-title">{{khoahoc.TenKH}}</h4>
+                  <p class="card-text">Giảng Viên: {{khoahoc.GiangVien}}</p>
+                  <span>Đánh Giá: </span>
+                  <span class="star">
 
-                          <p class="mb-0">Giá: {{khoahoc.GiaTien | number:'.0'}}<sup>đ</sup>
-                          </p>
-                          <a routerLink='/learn-continue/{{khoahoc.id}}/{{khoahoc.MangKH_id}}'
-                              class="text-center" class="btn btn-info">Xem Chi Tiết</a>
-                      </div>
+                    <i *ngFor='let star of khoahoc.DanhGia' class="fa fa-star"></i>
+
+                  </span><br>
+                  <span class="number_average">4.6</span>
+                  <span class="number_rating">(11.597)</span>
+                  <div class="price text-center">
+
+                    <p class="mb-0">Giá: {{khoahoc.GiaTien | number:'.0'}}<sup>đ</sup>
+                    </p>
+                    <a routerLink='/learn-continue/{{khoahoc.id}}/{{khoahoc.MangKH_id}}' class="text-center"
+                      class="btn btn-info">Xem Chi Tiết</a>
                   </div>
+                </div>
               </div>
-          </div>
+            </div>
           </div>
           <div class="search-failed" *ngIf='!flagEx'>
             <p>Không có kết quả nào</p>
           </div>
-          <pagination-controls 
-          
-          autoHide="true"
-          responsive="true"
-          previousLabel="Trang trước"
-          nextLabel="Trang Kế"
-          (pageChange)="p = $event"></pagination-controls>
+          <pagination-controls autoHide="true" responsive="true" previousLabel="Trang trước" nextLabel="Trang Kế"
+            (pageChange)="p = $event"></pagination-controls>
         </div>
       </div>
     </div>
